@@ -3,39 +3,40 @@ package com.smart.expense.usersbudgets.controller;
 import com.smart.expense.usersbudgets.service.BudgetService;
 import lombok.RequiredArgsConstructor;
 import org.springframework.http.ResponseEntity;
+import org.springframework.security.core.Authentication;
 import org.springframework.web.bind.annotation.*;
 
-import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
-import java.util.stream.Collectors;
 
-/**
- * Внутренний API для общения между сервисами.
- * Не требует userId из токена, он приходит параметром.
- */
 @RestController
-@RequestMapping("/internal")
+@RequestMapping("/internal/budgets-by-user")
 @RequiredArgsConstructor
 public class InternalBudgetController {
 
     private final BudgetService budgetService;
 
-    @GetMapping("/budgets-by-user/{userId}")
+    @GetMapping("/{userId}")
     public ResponseEntity<List<Map<String, Object>>> getBudgetsByUser(
-            @PathVariable Long userId,
-            @RequestParam String month
+            @PathVariable String userId,
+            @RequestParam String month,
+            Authentication authentication
     ) {
-        List<Map<String, Object>> response = budgetService.getBudgetsByUserAndMonth(userId, month)
+        String authenticatedUserId = authentication.getName();
+        if (!authenticatedUserId.equals(userId)) {
+            throw new SecurityException("Access Denied: Cannot access another user's budgets");
+        }
+
+        var response = budgetService.getBudgetsByUserAndMonth(userId, month)
                 .stream()
                 .map(b -> {
-                    Map<String, Object> map = new HashMap<>();
+                    Map<String, Object> map = new java.util.HashMap<>();
                     map.put("category", b.getCategory());
                     map.put("amount", b.getAmount());
                     return map;
                 })
-                .collect(Collectors.toList());
+                .toList();
 
-        return ResponseEntity.ok(response);
+        return ResponseEntity.<List<Map<String, Object>>>ok(response);
     }
 }
